syntax = "proto3";
package tests.kitchensink;

option go_package = "tests_kitchensink";

import "validate/validate.proto";

message Fixed32 {
    fixed32 none = 1;

    fixed32 lt  = 2 [(validate.rules).fixed32.lt  = 5]; // x <  5
    fixed32 lte = 3 [(validate.rules).fixed32.lte = 5]; // x <= 5
    fixed32 gt  = 4 [(validate.rules).fixed32.gt  = 5]; // x >  5
    fixed32 gte = 5 [(validate.rules).fixed32.gte = 5]; // x >= 5

    fixed32 lt_gt   = 6 [(validate.rules).fixed32 = {gt:  10, lt:  15}]; // x >  gt && x <  lt
    fixed32 lt_gte  = 7 [(validate.rules).fixed32 = {gte: 10, lt:  15}]; // x >= gte && x <  lt
    fixed32 lte_gt  = 8 [(validate.rules).fixed32 = {gt:  10, lte: 15}]; // x >  gt && x <= lte
    fixed32 lte_gte = 9 [(validate.rules).fixed32 = {gte: 10, lte: 15}]; // x >= gte && x <= lte

    fixed32 lt_gt_inv   = 10 [(validate.rules).fixed32 = {lt:  20, gt:  25}]; // x <  lt || x >  gt
    fixed32 lt_gte_inv  = 11 [(validate.rules).fixed32 = {lt:  20, gte: 25}]; // x <  lt || x >= gte
    fixed32 lte_gt_inv  = 12 [(validate.rules).fixed32 = {lte: 20, gt:  25}]; // x <= lte || x >  gt
    fixed32 lte_gte_inv = 13 [(validate.rules).fixed32 = {lte: 20, gte: 25}]; // x <= lte || x >= gte

    fixed32 in     = 14 [(validate.rules).fixed32 = {in: [30, 35]}];
    fixed32 not_in = 15 [(validate.rules).fixed32 = {not_in: [40, 45]}];

    fixed32 const = 16 [(validate.rules).fixed32.const = 50];
}
