syntax = "proto3";
package tests.kitchensink;

option go_package = "tests_kitchensink";

import "validate/validate.proto";

message SInt64 {
    sint64 none = 1;

    sint64 lt  = 2 [(validate.rules).sint64.lt  = 5]; // x <  5
    sint64 lte = 3 [(validate.rules).sint64.lte = 5]; // x <= 5
    sint64 gt  = 4 [(validate.rules).sint64.gt  = 5]; // x >  5
    sint64 gte = 5 [(validate.rules).sint64.gte = 5]; // x >= 5

    sint64 lt_gt   = 6 [(validate.rules).sint64 = {gt:  10, lt:  15}]; // x >  gt && x <  lt
    sint64 lt_gte  = 7 [(validate.rules).sint64 = {gte: 10, lt:  15}]; // x >= gte && x <  lt
    sint64 lte_gt  = 8 [(validate.rules).sint64 = {gt:  10, lte: 15}]; // x >  gt && x <= lte
    sint64 lte_gte = 9 [(validate.rules).sint64 = {gte: 10, lte: 15}]; // x >= gte && x <= lte

    sint64 lt_gt_inv   = 10 [(validate.rules).sint64 = {lt:  20, gt:  25}]; // x <  lt || x >  gt
    sint64 lt_gte_inv  = 11 [(validate.rules).sint64 = {lt:  20, gte: 25}]; // x <  lt || x >= gte
    sint64 lte_gt_inv  = 12 [(validate.rules).sint64 = {lte: 20, gt:  25}]; // x <= lte || x >  gt
    sint64 lte_gte_inv = 13 [(validate.rules).sint64 = {lte: 20, gte: 25}]; // x <= lte || x >= gte

    sint64 in     = 14 [(validate.rules).sint64 = {in: [30, 35]}];
    sint64 not_in = 15 [(validate.rules).sint64 = {not_in: [40, 45]}];

    sint64 const = 16 [(validate.rules).sint64.const = 50];
}
